fix: Improve duplication handling in PracticeService